tests/ui/abi3_nativetype_inheritance.stderr
error[E0277]: the trait bound `PyDict: PyClass` is not satisfied
 --> $DIR/abi3_nativetype_inheritance.rs:5:1
  |
5 | #[pyclass(extends=PyDict)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `PyClass` is not implemented for `PyDict`
  |
  = note: required because of the requirements on the impl of `PyClassBaseType` for `PyDict`
  = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `PyDict: PyClass` is not satisfied
   --> $DIR/abi3_nativetype_inheritance.rs:5:1
    |
5   | #[pyclass(extends=PyDict)]
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `PyClass` is not implemented for `PyDict`
    |
   ::: $WORKSPACE/src/class/impl_.rs
    |
    | pub struct ThreadCheckerInherited<T: Send, U: PyClassBaseType>(PhantomData<T>, U::ThreadChecker);
    |                                               --------------- required by this bound in `ThreadCheckerInherited`
    |
    = note: required because of the requirements on the impl of `PyClassBaseType` for `PyDict`
    = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)
